[gd_scene load_steps=10 format=3 uid="uid://bvo7jmd45dt3"]

[ext_resource type="Script" uid="uid://bjxi40nkwc05j" path="res://scenes/PickUp/PickUp.gd" id="1_2prkh"]
[ext_resource type="Texture2D" uid="uid://2jyi4ixcomwj" path="res://assets/images/pill2.png" id="1_nhjjk"]
[ext_resource type="AudioStream" uid="uid://bng6qp1c1i26c" path="res://assets/sounds/Positive Sounds/sfx_sounds_powerup1.wav" id="2_jv42b"]
[ext_resource type="AudioStream" uid="uid://bf1rllmvcqykx" path="res://assets/sounds/Positive Sounds/sfx_sounds_powerup2.wav" id="3_2prkh"]
[ext_resource type="AudioStream" uid="uid://bsn7yuygsvo6" path="res://assets/sounds/Positive Sounds/sfx_sounds_powerup3.wav" id="4_jyvjw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nhjjk"]
height = 49.4975

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7uu2n"]
streams_count = 3
stream_0/stream = ExtResource("2_jv42b")
stream_1/stream = ExtResource("3_2prkh")
stream_2/stream = ExtResource("4_jyvjw")

[sub_resource type="Animation" id="Animation_2prkh"]
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.496869, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.458824, 1, 0.054902, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2prkh"]
_data = {
&"RESET": SubResource("Animation_2prkh")
}

[node name="PickUp" type="Area2D"]
script = ExtResource("1_2prkh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nhjjk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.785398
shape = SubResource("CapsuleShape2D_nhjjk")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_7uu2n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2prkh")
}
autoplay = "RESET"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="Sound" to="." method="_on_sound_finished"]
